# google-search-console-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
gsc_cli/: __init__.py  analytics.py  auth.py  cli.py  client.py  config.py  output.py  paths.py
scripts/: setup.sh
tasks/: todo.md
tests/: conftest.py  test_analytics.py  test_auth.py  test_cli.py  test_config.py  test_output.py
